@@ -1,3 +1,7 @@
+zg 29.11.2017 18:50:13 +0200 - build 5103
+
+1. 0002737: FCTL_SETPANELDIR напрасно закрывает панели плагинов.
+
 zg 28.11.2017 17:39:59 +0200 - build 5102
 
 1. FCTL_SETPANELDIRECTORY: для плагиновых панелей всегда возвращалось TRUE.
